@@ -194,6 +194,13 @@ Example  : chant "honey moon"\n\r\
 This chant will cause everyone in the room to slowly become more and more \
 nourished, ending any suffering from hunger or thirst.
 
+CHANT_MAGMACANNON=CHANT_MAGMA_CANNON
+CHANT_MAGMA_CANNON=<ABILITY>\
+Usage    : CHANT "MAGMA CANNON" [TARGET]\n\r\
+Example  : chant "magma cannon" orc\n\r\
+This chant causes the ground near the druid to go molten, which he or she \
+then draws forth and shoots at the target, engulfing them in flaming magma.
+
 CHANT_MOONCALF=CHANT_MOON_CALF
 CHANT_MOON_CALF=<ABILITY>\
 Usage    : CHANT "MOON CALF"\n\r\
